--- a/styles/style.css
+++ b/styles/style.css
@@ -4,10 +4,35 @@ body {
   align-items: center;
   justify-content: center;
   text-align: center;
-  background-image: url('data:image/svg+xml,%3Csvg width="42" height="44" viewBox="0 0 42 44" xmlns="http://www.w3.org/2000/svg"%3E%3Cg id="Page-1" fill="none" fill-rule="evenodd"%3E%3Cg id="brick-wall" fill="%239C92AC" fill-opacity="0.4"%3E%3Cpath d="M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z"/%3E%3C/g%3E%3C/g%3E%3C/svg%3E');
+  background-image: url('https://wallpapercave.com/wp/SKAnGM0.jpg');
 }
 
-img {
-  max-width: 50%;
-  margin-top: 10%;
+.text {
+  padding: 10px;
+  margin-top:5%;
+  background-color:rgba(255, 255, 255, 0.75);
+  border-radius: 10px;
+  border-style: 10px solid black;
+  font-family:"Impact";
 }
+
+#message-display {
+  color:blue;
+}
+
+#meme {
+  max-width: 50%;
+  margin-top: 5%;
+}
+
+#meme:hover{
+  transform: scale(1.2);
+}
+
+#goblin {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  max-width: 10%;
+}
+
